--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 
         // Image Overlay
-        var imageUrl = 'data/hillshade_jakarta.png';
+        var imageUrl = 'hillshade_jakarta.png';
         var imageExtent = [[-6.25, 106.75], [-6.0, 107.0]]; //bottom, left, top, right
         var imageOverlay = L.imageOverlay(imageUrl, imageExtent, {
             opacity: 0.7,
